# Projeto-individual

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: exp01_baseline.yaml  exp02_lr_low.yaml  exp03_hidden128.yaml  exp04.1_pipeline.yaml  exp06_decay_pipeline.yaml  exp06_dropout_pipeline.yaml  exp06_early_stopping.yaml  exp07_baseline_cnn.yaml  exp07_tl_feature_extraction.yaml  exp07_tl_finetune.yaml
docs/: aula04_mlops_intro.md
experiments/: prd.md
experiments/a1/: prd-template.md
src/taia_lab/: __init__.py
src/taia_lab.egg-info/: SOURCES.txt  requires.txt
src/taia_lab/pipelines/: run_experiment.py  run_transfer_pipeline.py  supervised_pipeline.py  transfer_pipeline.py
src/taia_lab/utils/: paths.py  seed.py
taia_lab.egg-info/: PKG-INFO  SOURCES.txt
